# ChangeLog for dev-lang/blassic
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/blassic/ChangeLog,v 1.22 2007/02/21 23:54:32 peper Exp $

  21 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

  12 Mar 2006; Aron Griffis <agriffis@gentoo.org> blassic-0.10.0.ebuild:
  Add deps for modular X

  30 Oct 2005; Fabian Groffen <grobian@gentoo.org> blassic-0.10.0.ebuild:
  Marked ~ppc-macos (bug #110815)

  24 Mar 2005; Michael Sterrett <mr_bones_@gentoo.org> -blassic-0.5.4.ebuild,
  -blassic-0.8.1.ebuild:
  clean out old versions

  21 Mar 2005; Guy Martin <gmsoft@gentoo.org> blassic-0.10.0.ebuild:
  Stable on hppa.

  17 Mar 2005; Joseph Jezak <josejx@gentoo.org> blassic-0.10.0.ebuild:
  Marked ppc for bug #84754.

  10 Mar 2005; Michael Sterrett <mr_bones_@gentoo.org> blassic-0.10.0.ebuild:
  Stable for x86

*blassic-0.10.0 (12 Feb 2005)

  12 Feb 2005; Michael Sterrett <mr_bones_@gentoo.org> +blassic-0.10.0.ebuild:
  version bump (bug #81760)

  24 Jun 2004; Michael Sterrett <mr_bones_@gentoo.org> -blassic-0.7.2.ebuild,
  -blassic-0.8.0.ebuild:
  clean out older ebuilds

  20 Apr 2004; Michael Sterrett <mr_bones_@gentoo.org> blassic-0.5.4.ebuild:
  IUSE; tidy

  16 Apr 2004; Guy Martin <gmsoft@gentoo.org> blassic-0.8.1.ebuild:
  Marked stable on hppa.

*blassic-0.8.1 (09 Feb 2004)

  09 Feb 2004; Michael Sterrett <mr_bones_@gentoo.org> blassic-0.5.4.ebuild,
  blassic-0.7.2.ebuild, blassic-0.8.1.ebuild:
  version bump

*blassic-0.8.0 (22 Jan 2004)

  22 Jan 2004; Michael Sterrett <mr_bones_@gentoo.org> blassic-0.8.0.ebuild:
  version bump

  22 Jan 2003; Guy Martin <gmsoft@gentoo.org> blassic-0.7.2.ebuild :
  Marked stable on hppa.

  28 Sep 2003; Michael Sterrett <msterret@gentoo.org> blassic-0.7.2.ebuild:
  mark stable for x86

  22 Sep 2003; <paul@gentoo.org> metadata.xml:
  Fix metadata.xml

*blassic-0.7.2 (21 Sep 2003)
