@@ -1,12 +1,12 @@
 DIST blassic-0.10.0.tgz 349416 RMD160 006df2c2ca25499050a2f7c9e711f07e57475fb2 SHA1 6bb8237c96cb84df8eae8754ca621a76e1d0956f SHA256 ca19d2d9cc82175e00c03866f25e3d910ae18d61263ea0f133cd0fb38f0cea49
-EBUILD blassic-0.10.0.ebuild 898 RMD160 02a23ccb8129a310f17984df1d20a871fb32d5ec SHA1 7a46ef14c8693cb13ad9f7ac8e5cf5c8d37a90dd SHA256 2b4370d1a0f481ad44c561cde831b0a52b1c81376a6757bffdbcf5ee17c87bd3
-MD5 51fe68a5d204fc5d2c81dbec469c8985 blassic-0.10.0.ebuild 898
-RMD160 02a23ccb8129a310f17984df1d20a871fb32d5ec blassic-0.10.0.ebuild 898
-SHA256 2b4370d1a0f481ad44c561cde831b0a52b1c81376a6757bffdbcf5ee17c87bd3 blassic-0.10.0.ebuild 898
-MISC ChangeLog 2580 RMD160 a8e55a595f897924dabed4815d9ad4326e6d504c SHA1 eba4af8eb516ad237901f5c595933d5a7c37a9bd SHA256 6b305e4c0d2f517cbda1e40d322d64c66ea69325baad6e5afc7fcb31461d5b17
-MD5 d5a7c6fb51a9b1e1d0abc75dbd495323 ChangeLog 2580
-RMD160 a8e55a595f897924dabed4815d9ad4326e6d504c ChangeLog 2580
-SHA256 6b305e4c0d2f517cbda1e40d322d64c66ea69325baad6e5afc7fcb31461d5b17 ChangeLog 2580
+EBUILD blassic-0.10.0.ebuild 836 RMD160 ce0f46635ff9747189db534d6575f6f0dfb675e2 SHA1 f64fef1fd6e9ccfc5a0c241465d9fca61ca1db05 SHA256 461cf9d85979c0d6d6fe3bbeb5984cca4a223789d0e12014cd0eb6d0bf14a656
+MD5 7792b51e610c3ccd88aeb7ce0838ac3a blassic-0.10.0.ebuild 836
+RMD160 ce0f46635ff9747189db534d6575f6f0dfb675e2 blassic-0.10.0.ebuild 836
+SHA256 461cf9d85979c0d6d6fe3bbeb5984cca4a223789d0e12014cd0eb6d0bf14a656 blassic-0.10.0.ebuild 836
+MISC ChangeLog 2684 RMD160 d7f8e33469a658e37136d6803308a4087172aa9e SHA1 6a1e0a257c5f82bab578d9ed2f89a2fbf2f9c7fa SHA256 0eef7569e628c3d7685dfa7f769025bba96aa0bf2c4e3520aaeaaefc3655ef93
+MD5 8fd5c708862af4272e29ab8d0f95658d ChangeLog 2684
+RMD160 d7f8e33469a658e37136d6803308a4087172aa9e ChangeLog 2684
+SHA256 0eef7569e628c3d7685dfa7f769025bba96aa0bf2c4e3520aaeaaefc3655ef93 ChangeLog 2684
 MISC metadata.xml 565 RMD160 ee0dc9d7cf5f141e97698d17e736912f50de3f2e SHA1 eb0f3abfe74e7127abd682694fd8f61ce0028e4d SHA256 ef1bedf849891d18fd9b76e031cab1cf30b1b20fec6e0c888df0844c86279b17
 MD5 161648a71c6e30291c65378c52e8ea7e metadata.xml 565
 RMD160 ee0dc9d7cf5f141e97698d17e736912f50de3f2e metadata.xml 565
