@@ -1,6 +1,6 @@
-# Copyright 1999-2006 Gentoo Foundation
+# Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/blassic/blassic-0.10.0.ebuild,v 1.8 2006/03/12 22:40:38 mr_bones_ Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/blassic/blassic-0.10.0.ebuild,v 1.9 2007/03/21 19:01:45 mr_bones_ Exp $
 
 DESCRIPTION="classic Basic interpreter"
 HOMEPAGE="http://blassic.org"
@@ -12,19 +12,10 @@ SLOT="0"
 IUSE="svga X"
 
 RDEPEND="sys-libs/ncurses
-	X? (
-		|| (
-			( x11-libs/libICE x11-libs/libX11 x11-libs/libSM )
-			virtual/x11
-		)
-	)
+	X? ( x11-libs/libICE x11-libs/libX11 x11-libs/libSM )
 	svga? ( media-libs/svgalib )"
 DEPEND="${RDEPEND}
-	X? (
-		|| (
-			x11-proto/xproto
-			virtual/x11 )
-	)"
+	X? ( x11-proto/xproto )"
 
 src_compile() {
 	econf \
