@@ -1,6 +1,10 @@
 # ChangeLog for dev-lang/blassic
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/blassic/ChangeLog,v 1.22 2007/02/21 23:54:32 peper Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/blassic/ChangeLog,v 1.23 2007/03/21 19:01:45 mr_bones_ Exp $
+
+  21 Mar 2007; Michael Sterrett <mr_bones_@gentoo.org>
+  blassic-0.10.0.ebuild:
+  dump virtual/x11
 
   21 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
   Transition to Manifest2.
